--- a/001-API/pom.xml
+++ b/001-API/pom.xml
@@ -7,6 +7,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>multithread-api</artifactId>
+    <artifactId>001-API</artifactId>
 
 </project>
