--- a/002-StopThread/pom.xml
+++ b/002-StopThread/pom.xml
@@ -7,6 +7,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>multithread-stopthread</artifactId>
+    <artifactId>002-StopThread</artifactId>
 
 </project>
