wait时调用interrupt()引发InterruptedException

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>004-AtomicInteger</module>
         <module>005-Producer_Customer</module>
         <module>006-DeadLock</module>
+        <module>007-Wait-InterruptedException</module>
     </modules>
 
 
