--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>005-Producer_Customer</module>
         <module>006-DeadLock</module>
         <module>007-Wait-InterruptedException</module>
+        <module>008-PipedStream</module>
     </modules>
 
 
