ThreadLocal,线程私有盒子

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>007-Wait-InterruptedException</module>
         <module>008-PipedStream</module>
         <module>009-Wait-Notify-Insert</module>
+        <module>010-ThreadLocal</module>
     </modules>
 
 
