--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -35,6 +35,7 @@
         <module>009-Wait-Notify-Insert</module>
         <module>010-ThreadLocal</module>
         <module>011-InheritableThreadLocal</module>
+        <module>012-ReentrantLock</module>
     </modules>
 
 
