--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>010-ThreadLocal</module>
         <module>011-InheritableThreadLocal</module>
         <module>012-ReentrantLock</module>
+        <module>013-Condition</module>
     </modules>
 
 
