--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>011-InheritableThreadLocal</module>
         <module>012-ReentrantLock</module>
         <module>013-Condition</module>
+        <module>014-ReentrantReadWriteLock</module>
     </modules>
 
 
