--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>014-ReentrantReadWriteLock</module>
         <module>015-Timer</module>
         <module>016-Singleton_lazy</module>
+        <module>017-ThreadState</module>
     </modules>
 
 
